--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,15 @@
 @import url('./reset.css');
+@import url('./navTop.css');
+@import url('./main.css');
+@import url('./footer.css');
+@import url('form.css');
 
 body {
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
     color: #333;
+}
+
+a {
+    text-decoration: none;
 }
